feat: configure api doc
